# SSS_ShaderProject

./: CMakeLists.txt  README.md
ConstantShader/: CMakeLists.txt
ConstantShader/include/: NGLScene.h
ConstantShader/shaders/: ConstantFragment.glsl
ConstantShader/src/: NGLScene.cpp
PerVertexDiffuse/shaders/: PerVertDiffuseFrag.glsl  PerVertDiffuseVert.glsl
PerVertexDiffuse/src/: NGLScene.cpp
SSS_ShaderProject/: CMakeLists.txt  README.md
SSS_ShaderProject/include/: NGLScene.h
SSS_ShaderProject/shaders/: SSSFragment.glsl  SSSVertex.glsl
SSS_ShaderProject/src/: NGLScene.cpp
WrapLighting/: README.md
WrapLighting/PerVertexDiffuse/: .gitignore
WrapLighting/PerVertexDiffuse/shaders/: PerVertDiffuseFrag.glsl  PerVertDiffuseVert.glsl
WrapLighting/PerVertexDiffuse/src/: NGLScene.cpp
imgui/src/: ImGuizmo.cpp
include/: NGLScene.h
shaders/: ConstantVertex.glsl  PBRFragment.glsl  PBRVertex.glsl
src/: NGLScene.cpp  NGLSceneMouseControls.cpp  main.cpp
